--- a/css/layout.css
+++ b/css/layout.css
@@ -1,26 +1,3 @@
-/*----------------------------------------------------------------------
-
-	MASTER STYLESHEET
-
-	Project:        Metronic "Acidus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-	Version:        1.0
-	Author:         KeenThemes
-	Primary use:    Corporate, Business Themes.
-	Email:			support@keenthemes.com
-	Follow: 		http://www.twitter.com/keenthemes
-	Like: 			http://www.facebook.com/keenthemes
-	Website:		http://www.keenthemes.com
-	Premium:		Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-
------------------------------------------------------------------------*/
-/* eg: @include user-select(none); */
-/* eg: @include rotate(45deg); */
-/* eg: @include translate3d(0,0,0); */
-/* eg: @include border-radius(3px); */
-/*------------------------------------------------------------------
-  	[The "base.scss" contains basic default element styles
-  		(colors, typography, margins & padding).]
-------------------------------------------------------------------*/
 html {
   overflow-x: hidden;
 }
@@ -34,22 +11,65 @@ body {
   font-family: Hind, sans-serif;
 }
 
-p {
+p, details {
   font-size: 15px;
   font-weight: 400;
   font-family: Hind, sans-serif;
-  color: #a6a7aa;
+  color: #848588;
   line-height: 1.4;
   margin-bottom: 15px;
 }
 
+summary {
+  font-size: 17px;
+  font-weight: 600;
+  font-family: Hind, sans-serif;
+  color: #848588;
+  line-height: 1.4;
+  margin-bottom: 5px;
+}
+
+summary::-webkit-details-marker {
+  display: none
+}
+
+summary:after { 
+  content: "+"; 
+  color: #848588; 
+  float: left; 
+  font-size: 1.5em; 
+  margin: -5px 10px 0 0; 
+  padding: 0; 
+  text-align: center; 
+  width: 20px;
+}
+
+details[open] summary:after {
+  content: "-";
+  color: #848588; 
+  float: left; 
+  font-size: 1.5em; 
+  margin: -7px 10px 0 0; 
+  padding: 0; 
+  text-align: center; 
+  width: 20px;
+}
+
 em,
-li,
-li a {
+{
   font-size: 16px;
   font-weight: 500;
   font-family: Hind, sans-serif;
   color: #515769;
+}
+
+li,
+li a {
+  font-size: 15px;
+  font-weight: 400;
+  font-family: Hind, sans-serif;
+  color: #848588;
+  margin-top: 3px;
 }
 
 a {
@@ -167,7 +187,7 @@ h4 {
 }
 
 /*------------------------------------------------------------------
-  	[Button]
+    [Button]
 ------------------------------------------------------------------*/
 .btn-theme {
   position: relative;
@@ -286,7 +306,7 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
-  	[Social Icons]
+    [Social Icons]
 ------------------------------------------------------------------*/
 .social-icons {
   display: inline-block;
@@ -313,7 +333,7 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
-  	[Promo Banner]
+    [Promo Banner]
 ------------------------------------------------------------------*/
 .promo-banner {
   text-align: center;
@@ -331,7 +351,7 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
-  	[Promo Block]
+    [Promo Block]
 ------------------------------------------------------------------*/
 .promo-block {
   position: relative;
@@ -387,7 +407,7 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
-  	[Service]
+    [Service]
 ------------------------------------------------------------------*/
 .service {
   background: #fff;
@@ -431,7 +451,7 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
-  	[Footer]
+    [Footer]
 ------------------------------------------------------------------*/
 .footer .footer-logo {
   width: 76px;
@@ -648,11 +668,20 @@ fieldset[disabled] .btn-theme {
   }
   .header .navbar-nav {
     margin: 0;
-    float: none;
+    /*float: left;*/
+    text-align: center;
   }
   .header .navbar-nav .nav-item {
-    float: none;
+    /*float: left;*/
+    text-align: center;
+    display: inline;
   }
+
+  .nav li{
+    display:inline;
+    text-align: center;
+  }
+
   /* Menu Container */
   .header .menu-container:before, .header .menu-container:after {
     content: " ";
@@ -694,6 +723,12 @@ fieldset[disabled] .btn-theme {
     padding-right: 0;
     margin-left: 0;
     margin-right: 0;
+    float:left;
+  }
+  .header .navbar-nav .nav-item {
+    /*float: left;*/
+    text-align: center;
+    display: inline;
   }
 }
 
@@ -825,7 +860,7 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
-  	[Text Colors]
+    [Text Colors]
 ------------------------------------------------------------------*/
 .color-base {
   color: #17bed2 !important;
@@ -840,7 +875,7 @@ fieldset[disabled] .btn-theme {
 }
 
 .color-subtitle {
-  color: #a6a7aa !important;
+  color: #959699 !important;
 }
 
 .color-link {
@@ -856,7 +891,7 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
-  	[Background Colors]
+    [Background Colors]
 ------------------------------------------------------------------*/
 .bg-color-base {
   background: #17bed2 !important;
@@ -871,7 +906,7 @@ fieldset[disabled] .btn-theme {
 }
 
 .bg-color-subtitle {
-  background: #a6a7aa !important;
+  background: #959699 !important;
 }
 
 .bg-color-link {
@@ -950,7 +985,7 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
-  	[Content]
+    [Content]
 ------------------------------------------------------------------*/
 .content {
   padding-top: 40px;
@@ -1332,4 +1367,55 @@ fieldset[disabled] .btn-theme {
   .xs-text-right {
     text-align: right;
   }
+}
+
+
+.col-centered {
+  float: none;
+  margin: 0 auto;
+}
+
+#above {
+  color: #337ab7;
+}
+
+
+/* Style the buttons that are used to open and close the accordion panel */
+button.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+
+div.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+button.accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+button.accordion.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
 }
