--- a/css/layout.css
+++ b/css/layout.css
@@ -29,7 +29,7 @@ summary {
   margin-bottom: 5px;
 }
 
-summary::-webkit-details-marker {
+/*summary::-webkit-details-marker {
   display: none
 }
 
@@ -53,7 +53,7 @@ details[open] summary:after {
   padding: 0; 
   text-align: center; 
   width: 20px;
-}
+}*/
 
 em,
 {
